<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="F_CalculateLimitAB" Id="{26899522-712e-45bf-a55a-ca263aea04ae}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION F_CalculateLimitAB : LREAL
VAR_INPUT
	KindMover				: uiKindMover;
	z						: LREAL;
END_VAR
VAR
	lrMoverSize				: LREAL;
	stMoverSize				: ST_MoverSize;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF KindMover = uiKindMover.AMP4220 THEN
	lrMoverSize := stMoverSize.AMP4220;
ELSIF KindMover = uiKindMover.AMP4550 THEN
	lrMoverSize := stMoverSize.AMP4550;
ELSE
	lrMoverSize := stMoverSize.AMP4330;
END_IF

F_CalculateLimitAB := ASIN(z/lrMoverSize);
]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>